[package]
name = "how-bad"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stdweb = "0.4.20"
trunk = "0.13.1"
web-sys = "0.3.52"
yew = "0.18.0"
wasm-bindgen-cli = "0.2.75"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
