[package]
name = "rust-arduino-blink"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"

[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"
rev = "536c5d"

[build]
target = "avr-atmega328p.json"

[unstable]
build-std = ["core"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"